--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -7,8 +7,11 @@
       </div>    
       <div class="navbar-end">
         <div class="control is-right navbar-item">
-          <input class="input" type="text" placeholder="Hashtag">
+          
+          <form action="/hashtag" method="POST"> 
+            <input name="search" class="input" type="text" placeholder="Hashtag">
+          </form>          
         </div>
       </div>
-    </div>
+    </div> 
 </nav>
