--- a/tweet/src/styles/styles.css
+++ b/tweet/src/styles/styles.css
@@ -6050,14 +6050,29 @@ body {
 .navbar {
   height: 6vh; }
 
+.nav-item {
+  display: block;
+  margin: 0 auto; }
+
 .column {
-  height: 100%; }
+  height: 100%;
+  overflow: scroll;
+  overflow-x: hidden; }
+
+::-webkit-scrollbar {
+  width: 0px;
+  /* remove scrollbar space */
+  background: transparent;
+  /* optional: just make scrollbar invisible */ }
+
+::-webkit-scrollbar-thumb {
+  background: #FF0000; }
 
 .columns {
   position: relative;
   height: 92vh;
   z-index: 1;
-  margin: 1vh 0; }
+  margin-bottom: 1vh; }
 
 .map {
   width: 100%;
@@ -6076,12 +6091,21 @@ body {
 .tweetSection {
   position: relative;
   z-index: 1;
-  width: 300px;
   height: 100%; }
+
+div.tweets {
+  overflow: hidden;
+  margin: 0;
+  margin: 1rem; }
+
+.box:not(:last-child) {
+  margin-bottom: 0rem; }
 
 .box {
   border-radius: 0px;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1); }
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
+  margin: 0;
+  margin-bottom: 0; }
 
 * {
   border-radius: 0; }
